Fix visual collapse of .dropdown with empty initial display value

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_dropdown.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_dropdown.scss
@@ -11,6 +11,7 @@
     line-height: $inputHeight;
   }
   .dropdownValue {
+    min-height: $inputHeight;   // =line-height; fixes visual collapse with empty initial value
     padding-left: 5px;
     &.iconDown:before{@include absolute(0 5px '' '');}
   }
